# bosonic-gates

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.binder/: environment.yml  postBuild
.github/workflows/: ci.yml  pdf-build.yml
content/module0_foundations/: nb0a_quantum_harmonic_oscillator.ipynb  nb0b_phase_space.ipynb  nb0c_open_systems.ipynb
content/module1_circuits/: nb1a_lc_to_josephson.ipynb  nb1b_transmon.ipynb  nb1c_dispersive_coupling.ipynb
content/module2_snail/: nb2a_snail_potential.ipynb  nb2b_snail_circuit_params.ipynb  nb2c_driven_snail.ipynb
content/module3_dynamics/: nb3a_rwa_derivation.ipynb  nb3b_driven_kerr_lindblad_redfield.ipynb  nb3c_floquet_markov.ipynb
content/module4_gates/: nb4a_snap_gates.ipynb  nb4b_ecd_gates.ipynb  nb4c_gate_benchmarking.ipynb
content/module5_optimal_control/: nb5a_propagators_fidelity.ipynb  nb5b_grape_snap.ipynb  nb5c_control_strategies.ipynb
content/module6_error_budget/: nb6a_error_channels.ipynb  nb6b_error_budget.ipynb  nb6c_validity_map.ipynb
lineage/: README.md  build_contributions.py  candidates_report.md  contributions.json  discover.py  mentorship.yaml  monitor.py  new_authors_report.md  pipeline.py  render_tree.py  verification_report.md  verify.py
notebooks/module0_foundations/: nb0a_quantum_harmonic_oscillator.ipynb  (+2 more)
scripts/: build_all_pdfs.sh  check_syntax.py  gen_nb0a.py  gen_nb0c.py  smoke_test_nb0bc.py
tests/: test_driven_kerr.py  test_error_budget.py  test_gates.py  test_hamiltonians.py  test_snail.py  test_states.py
(+36 files in other folders)
